Recieving messages works with threads. It is just not working right yet with sending.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 
 /.vs/repo/v15/Browse.VC.opendb
 /.vs/*
+/Assignment D/.vs/Assignment D/v15/ipch/AutoPCH/ee9104970764d8c3/CHATCLIENT2.ipch
+/Assignment D/.vs/Assignment D/v15/ipch/AutoPCH/d46b74746de1275f/CHATSERVER2.ipch
+/Assignment D/.vs/Assignment D/v15/Browse.VC.opendb
+/Assignment D/.vs/Assignment D/v15/Browse.VC.db
+/Assignment D/.vs/ProjectSettings.json
+/Assignment D/.vs/slnx.sqlite
