It looks like creating new sockets is working, but a segfault happens during creation of a new thread for a new client.

--- a/Assignment D/Makefile
+++ b/Assignment D/Makefile
@@ -8,11 +8,11 @@ LDFLAGS = -L/usr/local/ssl/lib
 LDLIBS = -lssl -lcrypto
 
 hellomake: chatClient2.c chatServer2.c directoryServer2.c
-	gcc chatServer2.c -o server -lssl -lcrypto;
+	gcc chatServer2.c -o server -lssl -lcrypto -lpthread;
 	gcc chatClient2.c -o client -lssl -lcrypto -lpthread;
 	gcc directoryServer2.c -o directory -lssl -lcrypto;
 debugDirectory: directoryServer2.c
-	gcc -g directoryServer2.c -o directory -lssl -lcrypto;
+	gcc -g directoryServer2.c -o directory -lssl -lcrypto -lpthread;
 debugClient: chatClient2.c
 	gcc -g chatClient2.c -o client -lssl -lcrypto -lpthread;
 
