Chat Servers now use threads

--- a/Assignment D/Makefile
+++ b/Assignment D/Makefile
@@ -10,11 +10,11 @@ LDLIBS = -lssl -lcrypto
 hellomake: chatClient2.c chatServer2.c directoryServer2.c
 	gcc chatServer2.c -o server -lssl -lcrypto -lpthread;
 	gcc chatClient2.c -o client -lssl -lcrypto -lpthread;
-	gcc directoryServer2.c -o directory -lssl -lcrypto;
+	gcc directoryServer2.c -o directory -lssl -lcrypto -lpthread;
 debugDirectory: directoryServer2.c
 	gcc -g directoryServer2.c -o directory -lssl -lcrypto -lpthread;
 debugClient: chatClient2.c
 	gcc -g chatClient2.c -o client -lssl -lcrypto -lpthread;
 
  debugServer: chatServer2.c
-	gcc -g chatServer2.c -o server -lssl -lcrypto;
+	gcc -g chatServer2.c -o server -lssl -lcrypto -lpthread;
