--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /Assignment D/.vs/Assignment D/v15/Browse.VC.db
 /Assignment D/.vs/ProjectSettings.json
 /Assignment D/.vs/slnx.sqlite
+/Assignment E/.vs
